--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -880,6 +880,9 @@ FRA_8_hours_worktime:0 "8 Hours Worktime Law"
 FRA_8_hours_worktime_desc:0 "The law proposed by the government of §Y[FRA.GetLeader]§! proposes setting legal working time at 8 hours per day for a total of 48 hours per week. Until then, daily working hours could reach 14 hours in certain sectors."
 FRA_8_hours_worktime_passed:0 "8 Hours Worktime Law Passed"
 
+ FRA_press_african_tribes_to_abolish_slavery:0 "Press African Tribes to End Slavery"
+ FRA_press_african_tribes_to_abolish_slavery_desc:0 "Despite a 1905 law prohibiting slavery in colonial Africa, the tribal practice of slavery is still widespread. The government must quickly enforce the law within the refractory territories at the risk of agitating the socialist opposition."
+
 FRA_investments_in_indochina:0 "Investements in [IND.getFlag]Indochina"
 FRA_exceptional_loan_to_indochina_ended:0 "Investments are done"
 
@@ -8712,6 +8715,12 @@ ottoman_minority_tt_desc_edirne_tt:0 "[ottoman_minority_tt_desc_edirne][TUR_otto
  FRA_french_integration_weak:0 "French Integration Effort"
  FRA_french_exploitation:0 "French Exploitation"
  FRA_administration_coloniale:0 "Administration Coloniale"
+
+ generic_tribal_slavery:0 "Tribal Slavery"
+ generic_tribal_slavery_desc:0 "Despite a 1905 law prohibiting slavery in colonial Africa, the tribal practice of slavery is still widespread."
+
+ generic_lack_of_civil_administrators:0 "Lack of Civil Administrators"
+ generic_lack_of_civil_administrators_desc:0 "A lack of public service officials severely limits the administration of the territory, making it impossible to take a census, conscript or mobilize residents."
 
  TUR_albanian_plot:0 "Albanian Plot"
  TUR_albanian_plot_desc:0 "We still have a chance to regain control of Albania. It seems possible to reorganize the weak local government and place Ahmed Izzet Pasha there. It only takes a little preparation.\n\nOur current preparation level is: §Y [?ALB_coup_detat|Y0=]%§!"
