--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -14849,3 +14849,7 @@ FRA_law_soon:0 "§GA law will be proposed soon by the §YParliament§! to addres
  ww1_france.491.t:0 "Coty's Governement"
  ww1_france.491.d:0 "The appointment of François Coty as Prime Minister marks a turning point in French economic policy. If Victor Napoleon had a limited liberal and protectionist vision, Coty inspires on the contrary. Great fortune of France, the new minister against liberalizing the country, forming powerful corporations and developing the nation's capital.\n\nTo do this, he can count on the support of his numerous newspapers and his political close friends, such as François Piétri or Urbain Gohier."
  ww1_france.491.a:0 "What could go wrong ?"
+
+ ww1_france.492.t:0 "Failure of West African Abolitionist Policy"
+ ww1_france.492.d:0 "Despite the promises we made following the application of the 1905 law relating to the abolition of slavery in Black Africa, we have not been able to curb the local practice. The tribes, notably those of Niger, upper Mali and Wadai, have not been affected by our actions and continue to cause a human disaster. The reputation of our government is now tarnished and the opposition is bombarding us with criticism."
+ ww1_france.492.a:0 "We didn't have time!"
