--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -6640,6 +6640,15 @@ FRA_ww1_ban_far_right_leagues_desc:0 "Militarist nationalist groups threaten the
  FRA_ww1_social_democrat_bloc_united:0 "Social Democrat Bloc United"
  FRA_ww1_social_democrat_bloc_united_desc:0 "The reforms are finished, after so much effort, France is no longer affected by the unstable bureaucracy of the 3rd Republic!"
 
+ FRA_ww1_establish_france_equatoriale:0 "Form the \"France Equatoriale\""
+ FRA_ww1_establish_france_equatoriale_desc:0 "Equatorial Africa was created in January 1910. Despite everything, the concrete establishment of this new administration is still in its infancy and requires government investment for the construction of official buildings, administrators' residences and roads."
+
+ FRA_ww1_press_abolition_of_slavery_in_africa:0 "Press Abolition of Slavery in Africa"
+ FRA_ww1_press_abolition_of_slavery_in_africa_desc:0 "Despite a 1905 law prohibiting slavery in colonial Africa, the tribal practice of slavery is still widespread. The government must quickly enforce the law within the refractory territories at the risk of agitating the socialist opposition."
+
+ FRA_ww1_ecole_normale_william_ponty:0 "Ecole Normale William-Ponty"
+ FRA_ww1_ecole_normale_william_ponty_desc:0 "A lack of public service officials severely limits the administration of the territory, making it impossible to take a census, conscript or mobilize residents. The construction of a higher education school in Africa would make it possible to train a greater number of public service administrators. An ideal location was found in Senegal on the island of Gorée."
+
  FRA_ww1_research_budget:0 "Research Budget"
  FRA_ww1_research_budget_desc:0 "We can allocate part of our funds to investment in new projects by the benefits of our industrial policy."
 
