--- a/localisation/english/ww1_parliament_gui_l_english.yml
+++ b/localisation/english/ww1_parliament_gui_l_english.yml
@@ -86,4 +86,4 @@
   party_11_text_french:0 ""
   party_11_text_desc:0 "§LFrom one year to the another, the number of seats in parliament can change, which sometimes causes empty seats to appear.§!"
 
-
+  testtest:0 "result coco : [?popularities^0|Y%]"
