--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -6907,7 +6907,7 @@ FRA_ww1_reform_the_reserve_territoriale_desc:0 "The Barthou law can be amended t
  FRA_join_republicain_federation:0 "\nSelecting §Ythis focus§! will place us in the role of £parliament_party_icon|[?v] [GetParliamentPartyName] which represent [?republicain_federation|Y0] seats."
  FRA_get_republicain_federation_seats:0 "£parliament_party_icon|[?v] [GetParliamentPartyName] represent [?republicain_federation|Y0] seats."
 
- FRA_get_socialists_seats:0 "SFIO represents [?SFIO|Y0] seats."
+ FRA_get_socialists_seats:0 "£parliament_party_icon|[?v] [GetParliamentPartyName] represents [?SFIO|Y0] seats."
  FRA_ally_democratic_republican_alliance:0 "The £parliament_party_icon|[?v] [GetParliamentPartyName] will join our §YSocialist Alliance§!, allowing us to gain [?democratic_republican_alliance|Y0]§Y seats.§!"
  FRA_ally_radicals:0 "The £parliament_party_icon|[?v] [GetParliamentPartyName] will join our §YSocialist Alliance§!, allowing us to gain [?radical_party|Y0]§Y seats.§!"
 
