--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -3036,6 +3036,7 @@ we_are_number_one_Naval_treaty_nation:0 "We are the most powerful navy of all ad
  FRA_socialism_activism:0 "Socialist Activism"
  FRA_socialism_activism_desc:0 "Radical left-wing socialist, anarchist, trade unionist and communist elements organized against the state, regularly perpetuating sabotage, demonstrations and rallies against the government."
 FRA_anti_french_resistance:0 "Anti-French Resistance"
+FRA_anti_french_resistance_mid:0 "Anti-French Resistance"
 FRA_colonial_conscription:0 "Colonial Conscription"
 
  MOR_sharifian_governement:0 "Sharifian Governement"
