--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -1676,6 +1676,9 @@ FRA_french_local_investments_non_UEII:0 "Local Investements"
  ww1_france.409.d:0 "The Minister of the Armed Forces Adolphe Messimy and part of the general staff were not satisfied with Plan XVII established by Victor-Constant Michel, current chief strategist of the French army. Too defensive, this plan considered that Germany would attack through Belgium in order to reach Paris quickly, while encircling part of our army through the operation of a war of movement. Thus, Victor-Constant Michel had recommended the movement of two thirds of the army to the Belgian border in order to anticipate such a situation.\n\nThe very conservative general staff immediately opposed this plan, describing the generalissimo as incompetent. Thus, the Minister of War made the decision to change his chief strategist and prefer Joffre."
  ww1_france.409.a:0 "Michel was a fool"
  ww1_USA.116.t:0 "Battle of Bud Bagsak"
+ww1_USA_wilson.28.t:0 "Assassination Attempt on Thomas Marshall"
+ww1_USA_wilson.28.d:0 "D.C was woken up today by the sound of an explosion. After a short investigation, it's been confirmed this explosion was from dynamite planted at the White Hhouse, more specifically outside the reception room, which happens to be next to Marshall's office door. The explosion however, went off during midnight instead of early next morning like intended.\n\nThe perpetrator, Eric Muenter, was coincidencly enough already under arrest by the morning for a different crime. The man broke into the home of Jack Morgan, son of financier J.P. Morgan, demanding that he stop the sale of weapons to the Entente. Morgan calmly denied the mans demands, and thus Muenter shot him twice then attempted to escape, when police caught him. He not only confessed to shooting Morgan, but also being behind the explosion in the White House yesterday as a 'legitimate form of protest' against the Wilson administration, which he feared was bringing the country to war."
+ww1_USA_wilson.28.a:0 "Was the Kaiser behind this deranged mans actions?"
 highly_qualified:0 "Highly Qualified"
 	pacifist:0 "Pacifist"
  ww1_USA_wilson.22.t:0 "Dreams of the Pacifist"
@@ -13553,6 +13556,9 @@ gre_we_shall_not_perish:0 "We Shall Not Perish"
  ww1_nejd.14.a:0 "Mobilize troops and repel the attack!"
  ww1_nejd.15.t:0 "Defeat at the Battle of Jarrab"
  ww1_nejd.15.d:0 "In a devastating turn of events, we have not only suffered a significant defeat at the hands of Jabal Shammar in the Battle of Jarrab, but also faced a grave tragedy. In the aftermath of the battle, William Shakespear, our esteemed British ally and a key figure in establishing diplomatic relations, was captured and beheaded by the enemy. This loss goes beyond the battlefield."
+ww1_USA.162.t:0 "Womens Suffrage Protesters March on Washington"
+ww1_USA.162.d:0 "Around 10 thousand protests today marched down Pennsylvania Avenue in demand to give women the right to vote. These protesters have made history as the first organized protest to ever decend on D.C. The protesters stayed for several hours, giving speeches and even acting out stories at one point. This protest is expected to put pressure on the current presidental elect to take action on the issue, which has been neglected for the last few years."
+ww1_USA.162.a:0 "They're making a lot of noise, that's for sure"
  ww1_nejd.15.a:0 "Over the humanity!"
  ww1_nejd.16.t:0 "Rashidi forces Repelled!"
  ww1_nejd.16.d:0 "In a display of exceptional military prowess and resilience, we have successfully repelled the formidable forces of Jabal Shammar. Our strategic acumen, coupled with the indomitable spirit and bravery of our soldiers, led to this decisive victory."
