--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -1012,6 +1012,7 @@
  STATE_1011:0 "Veracruz Port"
  STATE_1012:0 "Cherepovets"
  STATE_1013:0 "Asterabad"
+ STATE_1014:0 "Caribbean Netherlands"
 
  Dyushambe:0 "Dyushambe"
  YODONG_STATE:0 "Yodong"
