bit of post war

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -8210,6 +8210,13 @@ wilshiri.tt:0 "The administration will shift §cright§!"
 wilshile.tt:0 "The administration will shift §Sleft§!"
 secretary_of_interior:0 "Secretary of the Interior"
 USA_william_mcadoo:0 "William Mcadoo"
+USA_post_war_economy:0 "Post War Economic Reconstruction"
+post_war_dyn:0 "Add '§YPost War Economic Reconstruction§!' which grants:\nConstruction Speed: §R-40.00%§!\nPolitical Power Gain: §R-20%§!\nStability: §R-30.00%§!\nConsumer Goods Factories factor: §Y+30.00%§!"
+
+post_war_fstf:0 "Modify '§YPost War Economic Reconstruction§!' by:\nConstruction Speed: §G+10.00%§!"
+post_war_pwp:0 "Modify '§YPost War Economic Reconstruction§!' by:\nConsumer Goods Factories factor §Y-15.00%§!"
+post_war_bw:0 "Modify '§YPost War Economic Reconstruction§!' by:\nStability §G+10.00%§!"
+
 USA_treaty_with_el_salvador:0 "Treaty With El Salvador"
 USA_william_bryan_foreign_policy:0 "William Bryan Foreign Policy"
 USA_promises_to_strikers:0 "Promises to Railway Workers"
