--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -1671,7 +1671,9 @@ FRA_french_local_investments_non_UEII:0 "Local Investements"
  ww1_france.408.t:0 "Promoting New Commanders"
  ww1_france.408.d:0 "The war revealed the poor quality of our army, especially of our high ranked commanders, and measures were proposed to promote and replace those who had distinguished themselves."
  ww1_france.408.a:0 "I'm counting on you."
-
+ww1_USA_wilson.29.t:0 "The Dustle Settles"
+ww1_USA_wilson.29.d:0 "The Great War is finally over. While we have won the war, our job in the coming year is certainly not going to be any easier. Transitioning from a war economy back to a civilian one is going to be no easy feat at all, and this dramatic shift is certainly going to cause some short term economic issues. We have won the war, now lets see if we can win the peace."
+ww1_USA_wilson.29.a:0 "Remain optimistic! After this hiccup, prosperity awaits!"
  ww1_france.409.t:0 "New Commander in Chief"
  ww1_france.409.d:0 "The Minister of the Armed Forces Adolphe Messimy and part of the general staff were not satisfied with Plan XVII established by Victor-Constant Michel, current chief strategist of the French army. Too defensive, this plan considered that Germany would attack through Belgium in order to reach Paris quickly, while encircling part of our army through the operation of a war of movement. Thus, Victor-Constant Michel had recommended the movement of two thirds of the army to the Belgian border in order to anticipate such a situation.\n\nThe very conservative general staff immediately opposed this plan, describing the generalissimo as incompetent. Thus, the Minister of War made the decision to change his chief strategist and prefer Joffre."
  ww1_france.409.a:0 "Michel was a fool"
