--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -11937,6 +11937,9 @@ AUH_handle_federalism:0 "If the reform pass, it will §Ycore all of the constitu
  rusrevolt.22.t:0 "Allied Landing at Archangelsk"
  rusrevolt.22.d:0 "Additional allied troops landed at Arkhangelsk. The White garrison couped the Bolshevik local authority and welcomed the troops in hurry."
  rusrevolt.22.a:0 "To Petrograd!"
+ww1_USA.164.t:0 "American Protective League to U.S. Food Administration report: The Java Restaurant"
+ww1_USA.164.d:0 "U.S Food Administration,\nMarket Street, nr. Sansome,\nSan Francisco, Cal.\n\nIt is our duty to report to this office that an Austrian reastraunt called 'The Java' at 11 Mason Street, has refused to follow the instructions of the Food Administration in removing the sugar bowls from the tables, and as late as six o'clock in the evening, the sugar bowls were still on the table.\n    Yours very truely,\n    American Protection League"
+ww1_USA.164.a:0 "Their work in instances like this surely are helpful"
  rusrevolt.28.t:0 "General Staff Planning the Kerensky Offensive"
  rusrevolt.28.d:0 "The Russian High Command, under the leadership of Minister of War Alexander Kerensky, is convening to plan a major offensive. This move is seen as a desperate bid to turn the tide of the war and to demonstrate to the Entente powers that Russia remains a capable and committed ally. The morale of the troops is wavering, and the home front is restless, but the General Staff believes a successful offensive could restore faith in the Provisional Government and secure further support from our allies."
  rusrevolt.28.a:0 "We must prove our strength to the Entente"
