using newer civil war system for Defeated France

--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -14858,3 +14858,7 @@ FRA_law_soon:0 "§GA law will be proposed soon by the §YParliament§! to addres
  ww1_france.493.t:0 "Resistance in Chad"
  ww1_france.493.d:0 "Despite the end of our intervention in Wadai, in eastern Chad, we have not been able to secure the entire region. Latent resistance from Bin Yusuf's followers continues in the form of looting and attacks on convoys, forcing us to strengthen local security. In total, Chad must be allocated 3,000 soldiers from the regular army, just to provide minimal peace..."
  ww1_france.493.a:0 "Exhausting"
+
+test_show_shall_coco:0 "[?seatsDistri^0] seats for communists"
+test_show_shall_coco_SCP:0 "[?SCP|Y] seats for Silent's party"
+test_show_shall_coco_SSP:0 "[?SSP|Y] seats for Shall's party"
