albanian vilayet fix

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -8252,9 +8252,9 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_private_ownership_for_autonomous_region_factories:0 "Private Ownership for Autonomous Region Factories"
  TUR_private_ownership_for_autonomous_region_factories_tt:0 "Modify §YAutonomous Region ([TUR.GetName])§! by\n£civ_factory  Local Factories: §R-5%§!\n£political_violence_texticon  Resistance Target: §G-5%§!\n\nModification on §YSeperatist Sentiments§! will be changed by §G+0.10%§! stability"
  TUR_increase_conscription_for_autonomous_regions:0 "Increased Conscription for Autonomous Regions"
- TUR_increase_conscription_for_autonomous_regions_tt:0 "Modify §YAutonomous Region ([TUR.GetName])§! by\n£political_violence_texticon  Resistance Target: §R+5%§!\nRecruiable Population: §G+5.00%§!\n\nModification on §YSeperatist Sentiments§! will be changed by §R-0.10%§! stability"
+ TUR_increase_conscription_for_autonomous_regions_tt:0 "Modify §YAutonomous Region ([TUR.GetName])§! by\n£political_violence_texticon  Resistance Target: §R+5%§!\n£manpower_texticon  Recruitable Population: §G+5.00%§!\n\nModification on §YSeperatist Sentiments§! will be changed by §R-0.10%§! stability"
  TUR_conscription_exceptions_for_autonomous_regions:0 "Conscription Exceptions for Autonomous Regions"
- TUR_conscription_exceptions_for_autonomous_regions_tt:0 "Modify §YAutonomous Region ([TUR.GetName])§! by\n£political_violence_texticon  Resistance Target: §G-5%§!\nRecruiable Population: §R-5%§!\n\nModification on §YSeperatist Sentiments§! will be changed by §G+0.10%§! stability"
+ TUR_conscription_exceptions_for_autonomous_regions_tt:0 "Modify §YAutonomous Region ([TUR.GetName])§! by\n£political_violence_texticon  Resistance Target: §G-5%§!\n£manpower_texticon  Recruitable Population: §R-5%§!\n\nModification on §YSeperatist Sentiments§! will be changed by §G+0.10%§! stability"
  TUR_brewing_asir_rebellion:0 "Brewing Asir Rebellion"
  TUR_extermination_of_south_slavics:0 "Suppression of South Slavs"
  TUR_extermination_of_greeks:0 "Suppression of Greeks"
