--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -8158,12 +8158,13 @@ USA_unionization_of_wisconsin_suburbs:0 "Unionization of Wisconsin Suburbs"
 USA_moderates_expect_infrastructure_investments:0 "Moderates Expect Infrastructure Investments"
 USA_impending_economic_shutdown:0 "Risks of Strikes Spreading"
 USA_wilsons_democratic_party_desc:0 "With the ascension of Wilson to the white house, many are expecting a new wave of progressive reforms. However, the Democratic Party is a diverse one, with many different ideologies that are not necessary as reformist as Wilson in it. Therefore, Wilson will have to play his cards at the right time to ensure the rest of the party votes on the most progressive of his agenda when needed.\n\nThis is represented by your level of §SProgressivism§! available at your use. With more progressivism, Wilson can ensure his legislation is more widereaching and reformist, giving §Gbuffs§! to several §YNational Focuses§! and §YEvents§!. However, by taking §SProgressive§! options in §YNational Focuses§! and §YEvents§!, we will §Rspend§! the tolerance that non progressives in the Democratic Party have for our progressive agenda, represented by a reduction in our level of §SProgressivism§!. §SProgressivism§! is a relatively rare resource, gained only through §YNational Focuses§! and §YEvents§!. Because of this, it's crucial that we save up high levels of §SProgresivism§! for only the most important looking bonuses.\n\nThe current level §SProgressivism§! is §Y[?USA_progressive_strength]§!\n\nAdditionally, we must manage the ideology of the administration. While a Progressive himself, Wilson does not voice the opinion of all Democrats. To ensure his administration is functional, Wilson will have to thread the needle between between §SProgressives§!, §YModerates§!, and §cConservatives§!. Depending on our picks in §YNational Focuses§!, §YEvents§!, and §YDecisions§!, our administration will shift towards different sides. Each side provides it's own §Gbenefits§!, §Yexclusive focuses§!, and §rmaluses§!.\n\nCurrently, the administration is [wilson_party_control]"
+USA_midterms_wilson_desc:0 "While §YWilson§! has won the presidency with a strong majority in congress, if §YWilson§! is not an effective president, he may end up losing his majority and thus have his plans for domestic agenda made §RImpossible§!.\n\nAmerican midterms have historically favored the party not in office, so §YWilson§! will have to ensure he mantains popularity if he wants to break the usual cycle."
 USA_central_bank:0 "True Central Bank"
 USA_central_bank_desc:0 "The United States is notorious for its issue with banking panics causing havok on the economy. It's time to end this system of destabilizing private banks, and centralize the banking system to a government ran system which will ensure a stable and efficient monetary system"
 USA_federal_reserve:0 "Guide the Private Banking Sector"
 USA_national_bank:0 "Bank of the United States"
 USA_federal_reserve_desc:0 "The United States is notorious for its issue with banking panics causing havok on the economy. It's time to fix this issue with the federal reserve, which will guide the financial system by setting interest rates, managing the money supply, and regulating financial markets. It will, however, be somewhat privitized, ensuring it does whats best for the economy instead of petty politics."
-woof.tt:0 "While the base §YIncome Tax§! idea gives:\nConsumer Goods Factory factory: §Y-15.0%§!\nHaving the administration §lLeaning Progressive§! or §SFirmly Progressive§! will modify the idea by an additional:\nConsumer Goods Factory factory: §Y-5.0%§! each."
+woof.tt:0 "While the base §YIncome Tax§! idea gives:\nConsumer Goods Factory factory: §Y-10.0%§!\nHaving the administration §lLeaning Progressive§! or §SFirmly Progressive§! will modify the idea by an additional:\nConsumer Goods Factory factory: §Y-5.0%§! each."
 USA_trade_union_support:0 "Cooperation of Trade Unions"
 sussyifyoureadingthenyoufat.tt:0 "While the base §YFederal Reserve§! idea gives:\nStability: §G+8.00%§!\nConstruction Speed: §G+8.00%§!\nFor every level of §SProgressivism§!, stacking up to §C4§! times, the idea will be modified by an additional:\nStability: §G+2.00%§!\nConstruction Speed: §G+2.00%§!\neach."
 
@@ -8175,10 +8176,10 @@ fyousussy.tt:0 "While the base modifier of this focus to §YWilsonomics§! is, (
 
 imgooningrn.tt:0 "For every level of §SProgressivism§!, stacking up to §C3§! times, we will be able to take this decision again.\nRight now, your level of §SProgressivism§! is: §Y[?USA_progressive_strength]§!"
 
-new_agri.tt:0 "While the base modifier of this focus to §YWilsonomics§! is, (Consumer Goods Factories factor: §Y-6.0%§!)\nFor every level of §SProgressivism§!, stacking up to §C3§! times, this focus will give an additional:\nConsumer Goods Factories factor: §Y-2.0%§!\neach."
+new_agri.tt:0 "While the base modifier of this focus to §YWilsonomics§! is, (Consumer Goods Factories factor: §Y-4.0%§!)\nFor every level of §SProgressivism§!, stacking up to §C3§! times, this focus will give an additional:\nConsumer Goods Factories factor: §Y-2.0%§!\neach."
 
 fightopi_6.tt:0 "Modify §YWilsonomics§! by:\nMonthly Population: §G+20.00%§!\nStability: §G+10.00%§!"
-fightopi3_6.tt:0 "Modify §YWilsonomics§! by:\nStability: §R-5.00%§!\nConsumer Goods Factories factor: §Y-8.0%§!"
+fightopi3_6.tt:0 "Modify §YWilsonomics§! by:\nStability: §R-5.00%§!\nConsumer Goods Factories factor: §Y-6.0%§!"
 
 
 modify_6.tt:0 "Modify §YWilsonomics§! by:\nResearch Speed: §G+6.00%§!"
