--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -568,7 +568,6 @@ BUL_faster_industrial_expansion:0 "§YThis branch§! will provide §GFaster Indu
 
  FRA_GER_intervention_in_France:0 "German Intervention in France"
  FRA_keep_guard_over_the_versailles_system:0 "Keep Guard over the Versailles System"
- FRA_keep_guard_over_the_versailles_system_desc:0 "Our glorious victory in the Great War ended a series of bad bloods that stretched back to the Napoleonic Wars and the Franco-Prussian War, but the newly established international order, known as the Versailles System, requires constant effort to maintain. We shall never allow the Germans to seek revenge again."
  FRA_german_intervention_timeout:0 "German War Fatigue Timeout"
  GER_surrender_to_hostical_FRA:0 "Surrender to [16.OWNER.getName]"
  FRA_german_intervention_timeout_desc:0 "After the Great War, even a victorious power like Germany could not afford too long conflicts. If the war were to drag on, it is very likely that she would withdraw."
@@ -888,9 +887,6 @@ FRA_8_hours_worktime:0 "8 Hours Worktime Law"
 FRA_8_hours_worktime_desc:0 "The law proposed by the government of §Y[FRA.GetLeader]§! proposes setting legal working time at 8 hours per day for a total of 48 hours per week. Until then, daily working hours could reach 14 hours in certain sectors."
 FRA_8_hours_worktime_passed:0 "8 Hours Worktime Law Passed"
 
- FRA_press_african_tribes_to_abolish_slavery:0 "Press African Tribes to End Slavery"
- FRA_press_african_tribes_to_abolish_slavery_desc:0 "Despite a 1905 law prohibiting slavery in colonial Africa, the tribal practice of slavery is still widespread. The government must quickly enforce the law within the refractory territories at the risk of agitating the socialist opposition."
-
 FRA_investments_in_indochina:0 "Investements in [IND.getFlag]Indochina"
 FRA_exceptional_loan_to_indochina_ended:0 "Investments are done"
 
@@ -900,8 +896,8 @@ FRA_too_much_reform_can_break_the_coalition:0 "§RPushing the reforms too far co
 
 FRA_far_right_leave_coalition:0 "§LNationalists§! will leave our §YConservative Alliance§!, making us lose [?nationalist|Y0]§R seats.§!"
 FRA_SFIO_leave_coalition:0 "§RSFIO§! will leave our §YConservative Alliance§!, making us lose [?SFIO|Y0]§R seats.§!"
-FRA_independents_radicals_leave_coalition:0 "£parliament_party_icon|[?v] [GetParliamentPartyName] will leave our §YConservative Alliance§!, making us lose [?independent_radicals|Y0]§R seats.§!"
-FRA_some_independents_radicals_join_us:0 "§GSome £parliament_party_icon|[?v] [GetParliamentPartyName] will leave their party and join us.§!"
+FRA_independents_radicals_leave_coalition:0 "§1Independent Radicals§! will leave our §YConservative Alliance§!, making us lose [?independent_radicals|Y0]§R seats.§!"
+FRA_some_independents_radicals_join_us:0 "§GSome §1Independent Radicals§! will leave their party and join us.§!"
 
 
 FRA_law_against_far_right_leagues:0 "Law Against Far-Right Leagues"
@@ -982,7 +978,7 @@ FRA_allow_to_chose_a_popular_figure:0 "§GIn theses difficult times, we will be 
 
 FRA_could_be_a_popular_figurehead:0 "§LWe could use him as a §YPopular Figurehead§! in favor of our governement...§!"
 
-FRA_rename_AF_to_comites_napoleoniens_imperialistes:0 "Unite most of the §gRestorationists§! deputies under a new party called £parliament_party_icon|9 §g\"Comités Napoléoniens Impérialistes\"§!."
+FRA_rename_AF_to_comites_napoleoniens_imperialistes:0 "Unite most of the §gRestorationists§! deputies under a new party called §g\"Comités Napoléoniens Impérialistes\"§!."
 FRA_bonaparte_legislative_elections_done:0 "Special Legislative Elections are done"
 
 FRA_50_republican_go_to_radical:0 "§Y50§! §2Republican§! §YDeputies§! will join the §CRadical Party§!, §Rmaking us lose 50 seats !§!"
@@ -1215,8 +1211,6 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  RUS_lvov_abolish_capital_punishment_desc:0 "Aiming for a more humane and progressive legal framework, the proposal to abolish capital punishment is a significant step towards reform. It reflects a deep commitment to human rights and the intrinsic value of human life, setting a new precedent in the Russian justice system amidst times of upheaval."
  RUS_lvov_abolish_class_race_religion_restriction:0 "Remove Class, Race, and Religion Restrictions"
  RUS_lvov_abolish_class_race_religion_restriction_desc:0 "Marking a commitment to inclusivity and equality, the proposal to abolish all restrictions based on class, race, or religion is set to transform society. This reform promises to dismantle long-standing barriers, ensuring equal rights and opportunities for every citizen in a more equitable Russia."
- RUS_help_SER:0 "Join Serbian War Effort"
- RUS_help_SER_desc:0 "Our Orthodox brothers, the Serbs, are at war with a great power. Balkan interests are at stake in Serbia, and we have a duty and a right to protect them."
 
  basmach_released:0 "Turkestan was released"
  alash_released:0 "Qazaqs were released"
@@ -2333,7 +2327,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_army_in_administration:0 "Army in Administration"
  TUR_army_subservient_to_government:0 "Army Subservient to Government"
  TUR_black_sea_raid_mission:0 "Black Sea Raid"
- TUR_black_sea_raid_mission_desc:0 "With the recent purchase of the two German ships Goeben and Breslau, some within the government has proposed to strike at the Russians when they're occupied on the Eastern Front. Though there are also those who oppose going to a war. If the influence of he army is high enough, it might take actions against the will of the government."
+ TUR_black_sea_raid_mission_sea:0 "With the recent purchase of the two German ships Goeben and Breslau, some within the government has proposed to strike at the Russians when they're occupied on the Eastern Front. Though there are also those who oppose going to a war. If the influence of he army is high enough, it might take actions against the will of the government."
  RUS_naval_vessels_receive_damage:0 "Every naval vessel in §YSevastapol§!, §YOdessa§!, §YYalta§! and §YKerch§! will lose 30% of their §Ystrength§!."
  TUR_independence_war_against_russia:0 "Ottoman War of Independence"
  RUS_independence_war_against_russia:0 "Ottoman War of Independence"
@@ -8164,7 +8158,7 @@ USA_unionization_of_wisconsin_suburbs:0 "Unionization of Wisconsin Suburbs"
 USA_moderates_expect_infrastructure_investments:0 "Moderates Expect Infrastructure Investments"
 USA_impending_economic_shutdown:0 "Risks of Strikes Spreading"
 USA_wilsons_democratic_party_desc:0 "With the ascension of Wilson to the white house, many are expecting a new wave of progressive reforms. However, the Democratic Party is a diverse one, with many different ideologies that are not necessary as reformist as Wilson in it. Therefore, Wilson will have to play his cards at the right time to ensure the rest of the party votes on the most progressive of his agenda when needed.\n\nThis is represented by your level of §SProgressivism§! available at your use. With more progressivism, Wilson can ensure his legislation is more widereaching and reformist, giving §Gbuffs§! to several §YNational Focuses§! and §YEvents§!. However, by taking §SProgressive§! options in §YNational Focuses§! and §YEvents§!, we will §Rspend§! the tolerance that non progressives in the Democratic Party have for our progressive agenda, represented by a reduction in our level of §SProgressivism§!. §SProgressivism§! is a relatively rare resource, gained only through §YNational Focuses§! and §YEvents§!. Because of this, it's crucial that we save up high levels of §SProgresivism§! for only the most important looking bonuses.\n\nThe current level §SProgressivism§! is §Y[?USA_progressive_strength]§!\n\nAdditionally, we must manage the ideology of the administration. While a Progressive himself, Wilson does not voice the opinion of all Democrats. To ensure his administration is functional, Wilson will have to thread the needle between between §SProgressives§!, §YModerates§!, and §cConservatives§!. Depending on our picks in §YNational Focuses§!, §YEvents§!, and §YDecisions§!, our administration will shift towards different sides. Each side provides it's own §Gbenefits§!, §Yexclusive focuses§!, and §rmaluses§!.\n\nCurrently, the administration is [wilson_party_control]"
-USA_midterms_wilson_desc:0 "While §YWilson§! has won the presidency with a strong majority in congress, if §YWilson§! is not an effective president, he may end up losing his majority and thus have his plans for domestic agenda made §RImpossible§!.\n\nAmerican midterms have historically favored the party not in office, so §YWilson§! will have to ensure he mantains popularity if he wants to break the usual cycle."
+USA_midterms_wilson_desc:0 "While the §1Democrat Party§! has won the presidency with a strong majority in congress, if the §1Democrats§! fall out of favorbility by the next elections, they may end up losing their majority and thus have Wilsons' plans for domestic agenda made §RImpossible§!.\n\nAmerican midterms have historically favored the party not in office, so the §1Democrat Party§! will have to ensure they mantain popularity if they wish to break the usual cycle.\n\nThere are several factors that will play into the results of the 1914 midterms.\nThings that will §Gfavor§! §1Democrats§! include:\n-Passing §CMajor§! pieces popular of legislation\n-Building up §YInfrastructure§! in states\n\nThings that will hurt §YWilson§! include:\n-Passing §RUnpopular§! pieces of legislation\n-Completing focuses that compromise American neutrality when having blow §Y50%§! War Support"
 USA_central_bank:0 "True Central Bank"
 USA_central_bank_desc:0 "The United States is notorious for its issue with banking panics causing havok on the economy. It's time to end this system of destabilizing private banks, and centralize the banking system to a government ran system which will ensure a stable and efficient monetary system"
 USA_federal_reserve:0 "Guide the Private Banking Sector"
@@ -9038,12 +9032,6 @@ USA_klan_ban_5:0 "Police Action Against the Klan"
  FRA_french_exploitation:0 "French Exploitation"
  FRA_administration_coloniale:0 "Administration Coloniale"
 
- generic_tribal_slavery:0 "Tribal Slavery"
- generic_tribal_slavery_desc:0 "Despite a 1905 law prohibiting slavery in colonial Africa, the tribal practice of slavery is still widespread."
-
- generic_lack_of_civil_administrators:0 "Lack of Civil Administrators"
- generic_lack_of_civil_administrators_desc:0 "A lack of public service officials severely limits the administration of the territory, making it impossible to take a census, conscript or mobilize residents."
-
  TUR_albanian_plot:0 "Albanian Plot"
  TUR_albanian_plot_desc:0 "We still have a chance to regain control of Albania. It seems possible to reorganize the weak local government and place Ahmed Izzet Pasha there. It only takes a little preparation.\n\nOur current preparation level is: §Y [?ALB_coup_detat|Y0=]%§!"
  TUR_albanian_plot_plus_25_percents:0 "§GIncrease §Y\"Albanian Plot\"§! success chance by §!§Y25%!§!"
@@ -9111,8 +9099,6 @@ USA_klan_ban_5:0 "Police Action Against the Klan"
 
  FRA_governement_support_to_le_faisceau:0 "Support \"Le Faisceau\""
  FRA_governement_support_to_le_faisceau_desc:0 "George Valois and Jacques Arthuys formed a party called "le Faisceau", composed of monarchists and reformist syndicalist socialists. This strange party remains aligned with our nationalist ideals and deserves our support."
-
-FRA_appoint_a_new_governement:0 "Form a New Cabinet"
 
  BUL_BW2_outcome_timer:0 "Bulgarian Intervention Outcome"
  BUL_BW2_outcome_timer_desc:0 "War cant last forever, if we dont beat the Balkan League fast enough, we will have to make a compromise over macedonian claims."
