some fixes and extra stuff

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -8161,6 +8161,9 @@ USA_wilsons_democratic_party_desc:0 "With the ascension of Wilson to the white h
 USA_midterms_wilson_desc:0 "While the §1Democrat Party§! has won the presidency with a strong majority in congress, if the §1Democrats§! fall out of favorbility by the next elections, they may end up losing their majority and thus have Wilsons' plans for domestic agenda made §RImpossible§!.\n\nAmerican midterms have historically favored the party not in office, so the §1Democrat Party§! will have to ensure they mantain popularity if they wish to break the usual cycle.\n\nThere are several factors that will play into the results of the 1914 midterms.\nThings that will §Gfavor§! §1Democrats§! include:\n-Passing §Cmajor§! pieces popular of legislation\n-Completing §Yinfrastructure§! related missions\n\nThings that will hurt §YWilson§! include:\n-Passing §RUnpopular§! pieces of legislation\n-Completing focuses that compromise American neutrality when having blow §Y50%§! War Support\nAccording to polling, if the midterms were held today, the results would be:"
 USA_central_bank:0 "True Central Bank"
 help_wilson_1:0 "Democrats standings in the §Y1914§! midterms will §Gimprove§!"
+hurt_wilson:0 "This legislation is §Runpopular§! with the American people! Democrats standings in the §Y1914§! midterms will §RWorsen§!"
+hurt_wilson_2:0 "This is §Runpopular§! with the American people! Democrats standings in the both the §Y1914§! and §Y1916§! elections will §RWorsen§!"
+
 help_wilson_2:0 "This is a §CMajor§! piece of legislation! Completing this focus will §Gimprove§! Democrats standings in §Call§! future elections!"
 USA_central_bank_desc:0 "The United States is notorious for its issue with banking panics causing havok on the economy. It's time to end this system of destabilizing private banks, and centralize the banking system to a government ran system which will ensure a stable and efficient monetary system"
 USA_federal_reserve:0 "Guide the Private Banking Sector"
