--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -1190,7 +1190,8 @@ USA_rural_price_controls_idea:0 "Agricultural Price Supports"
 rr.tt:0 "Building up food surpluses will certainly come with §Gbenefits§! once the United States joins The Great War."
 USA_aviation_service:0 "Aviation Service"
  USA_wilsons_annual_message:0 "Wilsons Annual Message"
-USA_anti_corruption_campaign:0 "Anti Corruption Campaign"
+USA_anti_corruption_campaign:0 "Dismantle the Corpocracy"
+USA_anti_corruption_campaign_desc:0 "Past American administrations have often been corrupted to the core by corporate and lobbyist influences. Even the great Theodore Roosevelt was guilty of this, but we must be different. We shall not only refuse any corporate and lobbyist pressure, we shall outright begin an investigation to root out their influence in Congress."
 USA_firmly_progressive_mission:0 "Progressive Fever Amongst The Administration"
 USA_farm_loans_idea:0 "Farm Loans"
 new_nationalism_railway:0 "Modify §YNew Nationalism§! by:\nConsumer Goods Factories factor: §Y3.0%§!\nStability: §G+2.00%§!"
