--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -8219,6 +8219,9 @@ USA_william_mcadoo:0 "William Mcadoo"
 USA_post_war_economy:0 "Post War Economic Reconstruction"
 post_war_dyn:0 "Add '§YPost War Economic Reconstruction§!' which grants:\nConstruction Speed: §R-40.00%§!\nPolitical Power Gain: §R-20%§!\nStability: §R-30.00%§!\nConsumer Goods Factories factor: §Y+30.00%§!"
 
+post_war_ib:0 "Modify '§YPost War Economic Reconstruction§!' by:\nConsumer Goods Factories factor: §Y-5.0%§!"
+post_war_ti:0 "Modify '§YPost War Economic Reconstruction§!' by:\nConsumer Goods Factories factor: §Y-10.0%§!\nStability: §R-10.00%§!"
+
 post_war_fstf:0 "Modify '§YPost War Economic Reconstruction§!' by:\nConstruction Speed: §G+10.00%§!"
 post_war_pwp:0 "Modify '§YPost War Economic Reconstruction§!' by:\nConsumer Goods Factories factor §Y-15.00%§!"
 post_war_bw:0 "Modify '§YPost War Economic Reconstruction§!' by:\nStability §G+10.00%§!"
