--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -880,6 +880,7 @@ USA_modern_west_lake_michigain:0 "Expansion of the Lake Michigan Costal Infrastr
 USA_fuck_roosevelt:0 "Taft's strategy will be to §Rreduce§! the influence of §Yprogressives§! in the party, giving government positions to §Yconservatives§! and attempting to §tdiscredit§! Roosevelt. This will most likely enrage Roosevelt and other progressives, however if their influence is low enough we will surely survive any primary attempt, and they won't have the political clout to break off from the party. However, it may only §9embolden§! Roosevelt and only serve to make Taft look §tout of touch§!"
 USA_protect_enviornment:0 "Taking these decisions will §Gincrease§! the support of §YProgressive Republicans§!"
 USA_reep_fruit:0 "Upon the opening of the Panama Canal, we will gain a bonus \nConsumer Goods Factories Factor: §Y-5%§! \non the "Panama Canal" national spirit, once the Panama Canal completes construction."
+public_hurt_wilson.tt:0 "The §CPublic Perception§! of §YWilsons§!' post war §YEconomic§! measures will §RWorsen§!"
 public_improve_wilson.tt:0 "The §CPublic Perception§! of §YWilsons§!' post war §YEconomic§! measures will §GImprove§!"
 public_improve_wilson.tt2:0 "The §CPublic Perception§! of §YWilsons§!' post war §YEconomic§! measures will §GGreatly Improve§!"
 USA_buy_up_surplus_wheat:0 "Buy Up Surplus Wheat"
@@ -1189,8 +1190,12 @@ USA_foster_flight_to_cities_desc:0 "While many in the country life movement comp
 USA_rural_price_controls_idea:0 "Agricultural Price Supports"
 rr.tt:0 "Building up food surpluses will certainly come with §Gbenefits§! once the United States joins The Great War."
 USA_aviation_service:0 "Aviation Service"
+USA_subsidize_international_american_banking:0 "Subsidize International American Banking"
  USA_wilsons_annual_message:0 "Wilsons Annual Message"
 USA_anti_corruption_campaign:0 "Dismantle the Corpocracy"
+USA_child_labor_tax:0 "Child Labor Tax"
+USA_the_final_nail_in_the_coffin_for_lobbyists:0 "The Final Nail in the Coffin for Lobbyists"
+USA_the_final_nail_in_the_coffin_for_lobbyists_desc:0 "There appears to be a large loophole in anti lobbyists laws of the past which we need to adress. While corporations can't directly donate millions to canidates, they can support campaigns that encourage members of the public to pressure Members of Congress to support what benefits them. We shall pass a bill to ban this."
 USA_anti_corruption_campaign_desc:0 "Past American administrations have often been corrupted to the core by corporate and lobbyist influences. Even the great Theodore Roosevelt was guilty of this, but we must be different. We shall not only refuse any corporate and lobbyist pressure, we shall outright begin an investigation to root out their influence in Congress."
 USA_firmly_progressive_mission:0 "Progressive Fever Amongst The Administration"
 USA_farm_loans_idea:0 "Farm Loans"
@@ -1352,6 +1357,8 @@ USA_annual_budget_act_desc:0 "The current budget process is a disorganized mess.
 workers_comp_pass.tt:0 "Modify §YNew Nationalism§! by:\nFactory Output: §G+5.00%§!\nProduction Efficiency Growth: §G+5.00%§!"
 workers_comp_pass_focus.tt:0 "When this focus is selected: \nActivate mission: §YWorkers Compensation Law§! \nif the legislation passes:\nModify §YNew Nationalism§! by:\nFactory Output: §G+5.00%§!\nProduction Efficiency Growth: §G+5.00%§!"
 strong_union.tt:0 "Modify §YNew Nationalism§! by:\nPolitical Power Gain: §G+5%§!\nFactory Output: §R-5.00%§!"
+USA_prohibation:0 "Prohibation"
+USA_1920_recession:0 "Economic Depression"
 USA_concessions_to_conservatives:0 "Concessions to Conservatives"
 USA_concessions_to_conservatives_desc:0 "With conservatives organizing against Roosevelt, we must placate those on the right in the Republican party to ensure they do not flee to their cause. By making key verbal promises, speaking on party unity, and finding common ground, we can ensure that while conservatives won't love us, some of them will atleast tolerate us. "
 USA_workers_compensation_act:0 "Workers Compensation Act"
@@ -1615,6 +1622,13 @@ BUL_ui_popularity_header:0 "Influence"
  ENG_Grain_Requisitioning:0 "Grain Requisitioning"
  ENG_Grain_Requisitioning_desc:0 "Though it may be unpopular, we must requisition grain to feed our armies."
  ENG_Big_Push:0 "The Big Push"
+USA_teaser_c:0 "Negotiate a Treaty of Friendship With Germany"
+USA_third_american_revolution:0 "The Third American Revolution"
+USA_fight_inflation:0 "Tackle Inflation"
+USA_fight_inflation_desc:0 "Mass production of many goods during The Great War as well as rapid changes to the economy have a serious risk of leading to out of control inflation. We shall order the federal reserve to gradually raise interests rates to ensure inflation does not get out of control."
+USA_slow_and_steady:0 "Slow and Steady Recovery"
+USA_slow_and_steady_desc:0 "The American economy simply needs time to restore itself to its usual state. We must avoid rocking the boat too much, and allow the free market to do what the free market does best."
+USA_third_american_revolution_desc:0 "An often forgetten fact about the first American Revolution is that the original goals of the revolution was not only an independent state including the Thirteen Colonies, but also Quebec and Rupert's Land. While we failed this goal in the first war, as well as what many refer to as the second American Revolution in 1812, The Great War presents us a unique opprotunity to achieve one of Clarks' greatest ambitions: a Third American Revolution, which will finally succeed in annexing Canada to the United States. The third times the charm, right?"
  ENG_Big_Push_desc:0 "We must do one last big push against our enemy!"
  ENG_End_Post_War_Trauma:0 "End the Post-War Economic Trauma"
  ENG_End_Post_War_Trauma_desc:0 "We have to repair ourselves if we want to win this."
