focus depends armenian reforms without german outcome

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -9078,6 +9078,12 @@ july_crisis_serbian_claim:0 "§Y[SER.getFlag][SER.getName]§! oppose this decisi
 july_crisis_alert:0 "July crisis alert"
 july_crisis_alert_tt:0 "§RThe July crisis§! begins, opposing §Y[AUH.getFlag][AUH.getAdjective]§! claims for reparations toward §Y[SER.getFlag][SER.getName]§!."
 
+armenian_reforms_crisis_Russian_claim:0 "§Y[RUS.getFlag][RUS.getName]§!  wants to carry out reforms for Anatolian Armenians"
+armenian_reforms_crisis_German_claim:0 "§Y[GER.getFlag][GER.getName]§!  wants to abolish any reforms"
+armenian_reforms_crisis_name_wargoal:0 "Armenian reforms Crisis "
+armenian_reforms_alert:0 "Armenian reforms crisis alert"
+armenian_reforms_crisis_alert_tt:0 "§RThe Armenian reforms crisis§! begins, opposing §Y[RUS.getFlag][RUS.getAdjective]§! claims for reparations toward §Y[GER.getFlag][GER.getName]§!."
+
 FRA_vote_will_fail:0 "§RThe vote will likely fail.§!"
 FRA_vote_will_pass:0 "§GThe vote shall pass !§!"
 FRA_effect_if_law_pass:0 "\n§YEffect if the vote pass :§!"
