--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -8223,6 +8223,8 @@ post_war_ib:0 "Modify '§YPost War Economic Reconstruction§!' by:\nConsumer Goo
 post_war_ti:0 "Modify '§YPost War Economic Reconstruction§!' by:\nConsumer Goods Factories factor: §Y-10.0%§!\nStability: §R-10.00%§!"
 
 post_war_fstf:0 "Modify '§YPost War Economic Reconstruction§!' by:\nConstruction Speed: §G+10.00%§!"
+post_war_eod:0 "Modify '§YPost War Economic Reconstruction§!' by:\nConstruction Speed: §G+5.00%§!"
+
 post_war_pwp:0 "Modify '§YPost War Economic Reconstruction§!' by:\nConsumer Goods Factories factor §Y-15.00%§!"
 post_war_bw:0 "Modify '§YPost War Economic Reconstruction§!' by:\nStability §G+10.00%§!"
 
