--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -1357,7 +1357,12 @@ USA_annual_budget_act_desc:0 "The current budget process is a disorganized mess.
 workers_comp_pass.tt:0 "Modify §YNew Nationalism§! by:\nFactory Output: §G+5.00%§!\nProduction Efficiency Growth: §G+5.00%§!"
 workers_comp_pass_focus.tt:0 "When this focus is selected: \nActivate mission: §YWorkers Compensation Law§! \nif the legislation passes:\nModify §YNew Nationalism§! by:\nFactory Output: §G+5.00%§!\nProduction Efficiency Growth: §G+5.00%§!"
 strong_union.tt:0 "Modify §YNew Nationalism§! by:\nPolitical Power Gain: §G+5%§!\nFactory Output: §R-5.00%§!"
+ USA_support_development_of_cities:0 "Support Development of Cities"
 USA_prohibation:0 "Prohibation"
+USA_expand_oil_drilling:0 "Expand Oil Drilling"
+USA_re_privatize_rail:0 "Re Privatize the Railways"
+USA_plumb_plan:0 "The Plumb Plan"
+USA_plumb_plan_idea:0 "Plumb Plan"
 USA_1920_recession:0 "Economic Depression"
 USA_concessions_to_conservatives:0 "Concessions to Conservatives"
 USA_concessions_to_conservatives_desc:0 "With conservatives organizing against Roosevelt, we must placate those on the right in the Republican party to ensure they do not flee to their cause. By making key verbal promises, speaking on party unity, and finding common ground, we can ensure that while conservatives won't love us, some of them will atleast tolerate us. "
